--- a/style/style.css
+++ b/style/style.css
@@ -335,7 +335,8 @@ footer {
 .content-wrapper {
     padding-left: 32px; 
     box-sizing: border-box; 
-    width: calc(100% - 32px); 
+    /* width: calc(100% - 32px);  */
+    width: 100%;
     margin: 0 auto; 
 }
 
@@ -347,7 +348,8 @@ footer {
 
 .images-container {
     display: flex;
-    gap: 32px; 
+    gap: 32px;
+     
 }
 
 .product-image {
