--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ body, html {
 .wrapper {
     width: 100%;
     margin: 0 auto; 
+    padding-bottom: 287px;
 }
 
 /* Header styling */
@@ -61,20 +62,22 @@ nav a.active, nav a:hover {
 
 /* Footer */
 footer {
-    position: relative; 
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height:287px;
+    height: 287px;
     background: #EFECFF;
     color: #333;
     text-align: left;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    z-index: 1000; /* Ensure it stays above other content */
 }
 
 .footer-content {
     display: flex;
-    position: relative; 
+    position: relative;
     height: 100%;
-    
 }
 
 .footer-section {
@@ -83,9 +86,7 @@ footer {
     left: 32px;
     font-family: 'Nunito', sans-serif;
     text-transform: uppercase;
-    
 }
-
 
 .footer-section a {
     color: #333;
@@ -100,7 +101,7 @@ footer {
     color: #333;
     font-size: 18px;
     font-weight: 700;
-    line-height: 28px;  
+    line-height: 28px;
 }
 
 .footer-section ul {
@@ -110,7 +111,7 @@ footer {
 }
 
 .footer-section ul li {
-    margin-bottom: 8px; 
+    margin-bottom: 8px;
 }
 
 .footer-section ul li:last-child {
@@ -120,7 +121,7 @@ footer {
 .footer-social {
     display: flex;
     justify-content: start;
-    gap: 24px; 
+    gap: 24px;
 }
 
 .footer-social a img {
@@ -132,6 +133,7 @@ footer {
     margin-top: 16px;
     font-size: 14px;
 }
+
 
 
 /* Hero section styling */
@@ -335,9 +337,9 @@ footer {
 .content-wrapper {
     padding-left: 32px; 
     box-sizing: border-box; 
-    /* width: calc(100% - 32px);  */
     width: 100%;
     margin: 0 auto; 
+    padding-bottom: 287px;
 }
 
 
