--- a/style/style.css
+++ b/style/style.css
@@ -74,6 +74,9 @@ footer {
     font-family: 'Nunito', sans-serif;
     text-transform: uppercase;
 }
+.footer-section.follow-us {
+    left: 308px; /* Move inline style to CSS */
+}
 .footer-section a {
     color: #333;
     font-family: 'Nunito', sans-serif;
@@ -295,7 +298,7 @@ footer {
 }
 /* Product images section */
 .product-images {
-    padding-top: 42px; 
+    /* padding-top: 42px;  */
 }
 .images-container {
     display: flex;
